# fvprop

./: .gitignore  .pre-commit-config.yaml  LICENSE.Apache-2.0  LICENSE.MIT  README.md  flake.nix
baselines/: README.md  pyproject.toml
baselines/src/baselines/: __init__.py
benchmark/: README.md  pyproject.toml
benchmark/artifacts/ephemeral/: Ephemeral.lean  lake-manifest.json  lakefile.toml
benchmark/src/benchmark/: __init__.py  structures.py
benchmark/src/benchmark/mcp/: server.py
benchmark/src/benchmark/mcp/tools/: lake.py
infrastructure/: README.md
website/: README.md
