[project]
name = "baselines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Quinn Dougherty", email = "quinn.dougherty.forall@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
baselines = "baselines:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
