[project]
name = "benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Quinn Dougherty", email = "quinn.dougherty.forall@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.51.0",
    "jsonlines>=4.0.0",
    "mcp>=1.9.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
]

[project.scripts]
benchmark = "benchmark:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
